--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "ikkez/f3-template-directives",
-    "description": "Collection of template directives for PHP Fat-Free Framework",
+    "name": "nagypite/f3-template-directives",
+    "description": "Collection of template directives for PHP Fat-Free Framework - forked from ikkez/f3-template-directives",
     "keywords": ["F3","fatfree","template","form","image"],
-    "homepage": "https://github.com/ikkez/f3-template-directives",
+    "homepage": "https://github.com/nagypite/f3-template-directives",
     "license": "GPL-3.0",
     "autoload": {
 		"classmap": ["src/"]
